fixed some alignment issues

--- a/style.css
+++ b/style.css
@@ -10,7 +10,8 @@ body {
     width: 90%;
 }
 .bar {
-    padding: 5px;
+    padding: 2px;
+    margin: 0 1px;
     border: 1px solid beige;
     color: white;
     border-top-left-radius: 3px;
@@ -54,6 +55,7 @@ button {
 }
 a {
     text-decoration: none;
+    color: #aaa;
 }
 a:hover {
     font-weight: 900;
@@ -65,7 +67,7 @@ a:hover {
 
 .container {
     border: 1px solid white;
-    height: 600px;
+    height: 500px;
     display: flex;
     align-items: flex-end;
     margin: 15px 10px 0px 15px;
@@ -76,39 +78,13 @@ a:hover {
     align-items: flex-end;
     width: 100%;
 }
-#bar1 {
-    background-color: blue;
-    height: 400px;
-}
-
-#bar2 {
-    background-color: green;
-    height: 250px;
-}
-
-#bar3 {
-    background-color: red;
-    height: 150px;
-}
-
-#bar4 {
-    background-color: yellow;
-    height: 300px;
-}
-
-#bar5 {
-    background-color: purple;
-}
 
 .y-axis {
-    border: 1px solid beige;
-    padding: 10px;
-    display: inline-block;
-    height: 96%;
+    border-right: 1px solid beige;
+    padding: 0 10px 0 5px;
+    display: inline;
 }
-/* .rotate {
-    transform: rotate(-90deg);
-}*/
+
 .x-axis {
     border: 1px solid beige;
     padding: 10px;
@@ -120,8 +96,9 @@ a:hover {
 
 footer {
     width: 90%;
-    border: 1px solid beige;
     padding: 10px;
     text-align: center;
     margin: auto;
+    background-color: maroon;
+    border-radius: 5px;
 }
